# palgrad

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.rs
src/lib/: err.rs  linear.rs  mod.rs  radial.rs
