[package]
name = "palgrad"
version = "0.0.1"
authors = ["Collyn O'Kane <47607823+okaneco@users.noreply.github.com>"]
exclude = ["res"]
edition = "2018"
description = "Command-line utility for artists and designers to explore color palettes and gradients."
homepage = "https://github.com/okaneco/palgrad"
repository = "https://github.com/okaneco/palgrad"
readme = "README.md"

keywords = ["color", "palette", "gradient", "rgb", "design"]
categories = ["graphics", "multimedia::images"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "2", default-features = false }

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"]

[dependencies.palette]
version = "0.5"
git = "https://github.com/Ogeon/palette/"
default-features = false
features = ["std"]
